[metadata]
name = napari-measure-drosophila-sperm
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari

[options.entry_points]
napari.manifest =
    napari-measure-drosophila-sperm = napari_measure_drosophila_sperm:napari.yaml